# Videosos_back

./: .gitignore  manage.py  pyproject.toml
Videosos_dev_back/: asgi.py  settings.py  urls.py  wsgi.py
media/subtitle/: Game.Of.Thrones.S01E01.1080p.5.1Ch.BluRay.ReEnc-DeeJayAhmed.vtt  game.of_.thrones.s02e10.1080p.bluray.x264-rovers_2_V37Lgmq.vtt
oauth/: apps.py  serializer.py  urls.py
oauth/endpoint/: auth_views.py  views.py
oauth/services/: auth_backend.py  base_auth.py  google.py
video_app/: admin.py  api.py  models.py  serializers.py  services.py  urls.py  views.py
video_app/migrations/: 0001_initial.py
