[tool.poetry]
name = "videosos-dev"
version = "0.1.0"
description = ""
authors = ["EmmanuilY <102925645+EmmanuilY@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "videosos_dev"}]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
django = "^4.1.5"
pillow = "^9.4.0"
google-auth = "^2.16.0"
django-cors-headers = "^3.13.0"
psycopg2 = "^2.9.5"
pyjwt = "^2.6.0"
requests = "^2.28.2"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
